--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,52 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color:#F3F1FF;
 }
+/* ---------------------------
+         navbar section 
+ ---------------------------*/
+
+.navbar{
+    font-family: 'Poppins', sans-serif;
+    height: 94px;
+    background-color: #562EFF;
+    display: grid;
+    grid-template-columns:  1fr 2fr 1fr;
+    align-items: center;
+}
+.logo{
+    display: flex;
+    margin-left: 300px;
+    align-items: center;
+}
+.navbar .logo img{
+    width: 40px;
+    height: 50px;
+}
+.logo-text{
+    font-size: 24px;
+    color: #FFFFFF;
+    padding-left: 16px;
+
+}
+
+.navigation ul{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    margin-left: 450px;
+}
+.navigation ul li{
+    margin: 10px 18px;
+    font-size: 16px;
+    
+    
+}
+
+.navigation ul li a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
 hr{
     border: 1px solid #D1D1D1;
     margin: 30px 0;
@@ -174,6 +220,31 @@ main{
     .players, .blogs, .Courses {
        grid-template-columns: repeat(1, 1fr);
     }
+
+    .course .course-thumbnail img{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+
+    .course{
+        margin-top: 10px;
+    }
+    
+    .logo{
+        
+        margin-left: 5px;
+        
+    }
+
+    .navigation ul{
+        
+        display: block;
+        margin-left: 25px;
+    }
+
+    .navigation ul li{
+        margin: 2px 18px;
+     }
     
 }
 
@@ -185,5 +256,25 @@ main{
        grid-template-columns: repeat(2, 1fr);
        
     }
-}
 
+    .course .course-thumbnail img{
+        width: 100%;
+        margin-bottom: 15px;
+    }
+    
+    .logo{
+        
+        margin-left: 70px;
+        
+    }
+
+    .navigation ul{
+
+        margin-left: 100px;
+    }
+
+    .profile{
+        margin-left: 80px;
+    }
+
+}
