--- a/styles/style.css
+++ b/styles/style.css
@@ -238,13 +238,17 @@ main{
 
     .navigation ul{
         
-        display: block;
         margin-left: 25px;
     }
 
     .navigation ul li{
         margin: 2px 18px;
+
      }
+
+     .profile{
+        margin-left: 70px;
+    }
     
 }
 
